<resources>
    <string name="app_name">MVVM</string>
    <string name="goals">Goals</string>
    <string name="tasks">Tasks</string>
    <string name="upcoming">Upcoming</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">Name</string>
    <string name="fill_all_fields">Adding new Goal</string>
    <string name="enter_description">Description</string>
    <string name="enter_date">Set deathline</string>
    <string name="add_task">New Task</string>
    <string name="set_deathline">To finish just set an realistic deathline</string>
</resources>
